[website] Fix blurring bug

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -10,6 +10,7 @@
 	--color-green: rgba(200, 255, 200, 1);
 	--color-red: rgba(150, 10, 10, 1);
 	--color-violet: rgba(150, 100, 150, 1);
+	--color-fadebg: rgba(7, 7, 8, 0.5);
 }
 
 @utility smolglow-* {
